--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,14 @@
-<html>
-    <head>
-        <title>Mental blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Algorithm's Blog</a></h1>
-        </div>
-
-        {% for post in posts %}
-        <div>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+        <div class="post">
+            <div class="date">
         	<p>published:{{post.published_date}}</p>
-        	<h1><a href="">{{post.title}}</a>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
+            <div class="explain">
         	<p>{{post.text|linebreaksbr}}</p>
+            </div>
         </div>
-        {% endfor %}
-    </body>
-</html>
+ {% endfor %}
+{% endblock %}
